--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -3,12 +3,12 @@
  ******************************************************************************/
 
 :root {
-  --global-bg-color: #{$white-color};
+  --global-bg-color: #{$anulika-bg-color};
   --global-code-bg-color: #{$code-bg-color-light};
-  --global-text-color: #{$black-color};
-  --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$purple-color};
-  --global-hover-color: #{$purple-color};
+  --global-text-color: #{$anulika-text-color};
+  --global-text-color-light: #{lighten($anulika-text-color, 20%)};
+  --global-theme-color: #{$anulika-accent};
+  --global-hover-color: #{$anulika-accent};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
@@ -48,12 +48,12 @@
 }
 
 html[data-theme='dark'] {
-  --global-bg-color: #{$grey-color-dark};
+  --global-bg-color: #{$anulika-text-color};
   --global-code-bg-color: #{$code-bg-color-dark};
-  --global-text-color: #{$grey-color-light};
-  --global-text-color-light: #{$grey-color-light};
-  --global-theme-color: #{$cyan-color};
-  --global-hover-color: #{$cyan-color};
+  --global-text-color: #{$anulika-bg-color};
+  --global-text-color-light: #{lighten($anulika-bg-color, 20%)};
+  --global-theme-color: #{$anulika-accent};
+  --global-hover-color: #{$anulika-accent};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
