--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -27,6 +27,11 @@ $grey-color-light:    lighten($grey-color, 40%);
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
 
+// Anulika-style colors
+$anulika-text-color:  #1d1e20 !default;
+$anulika-bg-color:    #ffffff !default;
+$anulika-accent:      #0076df !default;  // Using existing blue as accent
+
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
