--- a/_includes/repository/repo.html
+++ b/_includes/repository/repo.html
@@ -1,13 +1,14 @@
-{% assign repo_url =  include.repository | split: '/' %}
+{% assign repo_url = include.repository | split: '/' %}
 
 {% if site.data.repositories.github_users contains repo_url.first %}
-  {% assign show_owner = false %}
+{% assign show_owner = false %}
 {% else %}
-  {% assign show_owner = true %}
+{% assign show_owner = true %}
 {% endif %}
 
 <div class="repo p-2 text-center">
   <a href="https://github.com/{{ include.repository }}">
-    <img class="repo-img-light w-100" alt="{{ include.repository }}" src="https://github-readme-stats.vercel.app/api/pin/?username={{ repo_url[0] }}&repo={{ repo_url[1] }}&theme={{ site.repo_theme_light }}&show_owner={{ show_owner }}&cache_seconds=0&border_radius=8&title_color=1d1e20&text_color=1d1e20&bg_color=ffffff&icon_color=667eea">
+    <img class="repo-img-light w-100" alt="{{ include.repository }}"
+      src="https://github-readme-stats-idsts2670.vercel.app/api/pin/?username={{ repo_url[0] }}&repo={{ repo_url[1] }}&theme={{ site.repo_theme_light }}&show_owner={{ show_owner }}&cache_seconds=0&border_radius=8&title_color=1d1e20&text_color=1d1e20&bg_color=ffffff&icon_color=667eea">
   </a>
 </div>
